# ai-dataset-radar

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  README.zh-CN.md  analyze_insights.py  config.yaml  cron_weekly.sh  debug_vendors.py  docker-compose.yml  fix_report.md  notify_feishu.sh  pipeline-CLAUDE.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_weekly.sh
.claude/commands/: brief.md  deep-dive.md  diff.md  radar.md  recipe.md  scan.md  search.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: auto-review.yml  ci.yml  daily.yml
agent/: __init__.py  api.py  prompts.md  schema.json  tools.json
agent/static/: index.html
docs/: agent-integration.md  architecture.md  data-sources.md  datarecipe.md  landing-en.md  landing-zh.md  mcp.md  schema.md
mcp_server/: README.md  server.py
scripts/: fix_code_quality.py
src/: __init__.py  _version.py  alerting.py  alerting_additions.py  db.py  filters.py  intel_report.py  main.py  main_intel.py  notifiers.py  output_formatter.py  report.py
src/analyzers/: __init__.py  author_filter.py  change_tracker.py  competitor_matrix.py  data_type_classifier.py  dataset_lineage.py  deduplication.py  model_card_analyzer.py  model_dataset.py  opportunities.py  org_detector.py  org_graph.py  paper_filter.py  quality_scorer.py  trend.py  value_scorer.py
src/scrapers/: __init__.py  arxiv.py  base.py  blog_rss.py  github.py  github_org.py  hf_papers.py  huggingface.py  kaggle_scraper.py  modelscope.py  paperswithcode.py  pwc_sota.py  registry.py  semantic_scholar.py
src/trackers/: __init__.py  blog_tracker.py  github_tracker.py  github_trending_tracker.py  hn_tracker.py  org_tracker.py  producthunt_tracker.py  reddit_tracker.py  x_tracker.py
src/utils/: __init__.py  async_http.py  cache.py  http.py  keywords.py  llm_client.py  logging_config.py  watermark.py
tests/: __init__.py  conftest.py  test_agent_api.py  test_alerting.py  test_analyzers.py  test_async_http.py  test_blog_tracker.py  test_business_intel.py  test_change_tracker.py  test_competitor_matrix.py  test_data_type_classifier.py  test_dataset_lineage.py  test_db.py  test_dedup.py  test_filtering.py  test_github.py  test_github_tracker.py  test_github_trending.py  test_hf_papers.py  test_hn_tracker.py  test_huggingface.py  test_intel_report.py  test_json_output.py  test_kaggle_scraper.py  test_llm_client.py  test_mcp_search_diff.py  test_mcp_server.py  test_mcp_trend_history.py  test_modelscope.py  test_notifiers.py  test_org_graph.py  test_org_tracker.py  test_producthunt_tracker.py  test_reddit_tracker.py  test_semantic_scholar.py  test_value_analysis.py  test_watermark.py  test_x_tracker.py
