[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-dataset-radar"
version = "0.1.0"
description = "Competitive intelligence monitoring system for AI training datasets, tracking labs, vendors, and open-source releases"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Liu Kai", email = "mrliukai@gmail.com"}
]
keywords = [
    "ai",
    "dataset",
    "competitive-intelligence",
    "monitoring",
    "machine-learning",
    "mcp",
    "agent",
    "scraping",
    "huggingface",
    "training-data",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "pyyaml>=6.0",
    "feedparser>=6.0.0",
    "python-dateutil>=2.8.0",
    "sqlite-utils>=3.35",
    "playwright>=1.40.0",
    "anthropic>=0.40.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "aioresponses>=0.7.6",
]
all = [
    "ai-dataset-radar[mcp,dev]",
]

[project.urls]
Homepage = "https://github.com/liuxiaotong/ai-dataset-radar"
Documentation = "https://github.com/liuxiaotong/ai-dataset-radar#readme"
Repository = "https://github.com/liuxiaotong/ai-dataset-radar"
Issues = "https://github.com/liuxiaotong/ai-dataset-radar/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "mcp_server*", "agent*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
